Hands-on-lab/lab-files/yaml-templates/ex3-task1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
    maxSurge: 1
    maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
            app: api
      name: api
    spec:
      containers:
        - name: api 
          image: [LOGINSERVER].azurecr.io/content-api
          imagePullPolicy: Always
          securityContext:
            privileged: false
          ports:
          - containerPort: 3001
            hostPort: 3001
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
                cpu: 1
                memory: 128Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
