Hands-on-lab/lab-files/yaml-templates/ex3-task2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
      app: web
  name: web
spec:
  replicas: 1
  selector:
      matchLabels:
        app: web
  strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
  template:
      metadata:
        labels:
            app: web
        name: web
      spec:
        containers:
        - image: [LOGINSERVER].azurecr.io/content-web
          livenessProbe:
            httpGet:
                path: /
                port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 3000
              hostPort: 80
              protocol: TCP
          resources:
            requests:
                cpu: 1000m
                memory: 128Mi
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
