Hands-on-lab/lab-files/yaml-templates/ex3-task1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
    - name: api-traffic
      port: 3001
      protocol: TCP
      targetPort: 3001
selector:
  app: api
sessionAffinity: None
type: ClusterIP
